k8s/namespaces/base/monkey/monkey-app/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: monkey
spec:
  hosts:
    - "*"
  gateways:
    - monkey-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 7777
            host: monkey
